# Rust-Route

./: .gitignore  CHANGELOG.md  CONFIG_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  FEATURE_ENHANCEMENT_SUMMARY.md  GITHUB_UPLOAD_CONFIRMATION.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  PROJECT_COMPLETION_SUMMARY.md  README.md  SECURITY.md  USER_MANUAL.md  codecov.yml  demo_config_flexibility.py  rust-route-web.json  rust-route.json  test_demo.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: routing_benchmarks.rs
docs/: gap_analysis_and_stories.md
docs/screenshots/: README.md
examples/: basic_test.rs  config.json
src/: auth.rs  cli.rs  config_manager.rs  events.rs  ipv6.rs  lib.rs  main.rs  metrics.rs  network.rs  network_discovery.rs  protocol.rs  router.rs  routing_table.rs  testing.rs  web.rs
tests/: integration_test.rs  integration_tests.rs
web/: index.html
web/static/css/: style.css
web/static/js/: auth.js  config.js  dashboard.js  metrics.js  routes.js
web/templates/: config.html  dashboard.html  metrics.html  routes.html
