[package]
name = "rust-route"
version = "0.2.0"
edition = "2021"
authors = ["LITLAY2004 <your.email@example.com>"]
license = "MIT"
description = "A high-performance, production-ready RIP (Routing Information Protocol) router implementation written in Rust"
documentation = "https://docs.rs/rust-route"
homepage = "https://github.com/LITLAY2004/Rust-Route"
repository = "https://github.com/LITLAY2004/Rust-Route"
readme = "README.md"
keywords = ["networking", "routing", "rip", "protocol", "router"]
categories = ["network-programming", "command-line-utilities"]
exclude = [
    "target/*",
    ".git/*",
    ".github/*",
    "*.log",
    "*.tmp"
]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
colored = "2.0"
indicatif = "0.17"
console = "0.15"
comfy-table = "7.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
async-stream = "0.3"
# Web interface dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = "1.0"
# Authentication and security
jsonwebtoken = "9.0"
bcrypt = "0.15"
# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
# Configuration hot-reload
notify = "6.0"
# IPv6 support
ipnet = { version = "2.9", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tokio-test = "0.4"
tempfile = "3"

[[bench]]
name = "routing_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true
